Update styles.css and drawings.html with new button design and layout improvements

--- a/drawings.html
+++ b/drawings.html
@@ -34,10 +34,14 @@
     <select id="collectionSelect">
       <option value="all">All</option>
       <option value="house">House Drawings</option>
+      <option value="scetch book">scetch book</option>
       <option value="Wonderland">Wonderland</option>
       <option value="Throw">Throw</option>
       <option value="animals">Animal Drawings</option>
+      <option value="art">Art book</option>
       <option value="CANOE">Canoe Collection</option>
+      <option value="stairs">stairs</option>
+      <option value="dragon">dradon drawings</option>
       <!-- Add more options as needed -->
     </select>
   </div>
@@ -118,7 +122,7 @@
 </div>
 
     <!-- A3 Portrait -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="dragon">
       <img src="img/T2.png" alt="A3 Portrait"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
@@ -250,7 +254,8 @@
   </div>
 </div>
 
-    <div class="drawing-piece">
+ <!-- A5 Landscape -->
+    <div class="drawing-piece" data-collection="house">
       <img src="img/z35.png" alt="A5 Landscape"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(14.8 * var(--cm));">
@@ -309,7 +314,7 @@
 </div>
 
      <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="stairs">
       <img src="img/t51.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -320,7 +325,7 @@
   </div>
 </div>
 
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="house">
       <img src="img/z26.png" alt="A5 Portrait"
            class="drawing-img"
            style="width: calc(14.8 * var(--cm)); height: calc(21 * var(--cm));">
@@ -355,7 +360,7 @@
   </div>
 </div>
 
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="house">
       <img src="img/z30.png" alt="E1 Landscape"
            class="drawing-img"
            style="width: calc(14.5 * var(--cm)); height: calc(12 * var(--cm));">
@@ -367,7 +372,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="scetch book">
       <img src="img/t70.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -428,7 +433,7 @@
 </div>
 
     <!-- A3 Landscape -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="animals">
       <img src="img/t14.png" alt="A3 Landscape"
            class="drawing-img"
            style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -440,7 +445,7 @@
 </div>
 
     <!-- A3 Landscape -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="art">
       <img src="img/t60.png" alt="A3 Landscape"
            class="drawing-img"
            style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -457,14 +462,14 @@
            class="drawing-img"
            style="width: calc(7 * var(--cm)); height: calc(12.5 * var(--cm));">
           <div class="drawing-meta">
-    <h3>No.023</h3>
+    <h3>No.043</h3>
     <div class="meta-medium">2017 – Pencil on paper</div>
     <div class="meta-size">70 x 125mm</div>
   </div>
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="scetch book">
       <img src="img/t71.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -501,7 +506,7 @@
 </div>
 
  <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="scetch book">
       <img src="img/t68.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -524,7 +529,7 @@
 </div>
 
     <!-- A4 Landscape -->
-    <div class="drawing-piece" data-collection="CANOE">
+    <div class="drawing-piece" data-collection="house">
       <img src="img/t44.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
@@ -536,7 +541,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="stairs">
       <img src="img/t50.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -549,7 +554,7 @@
 
 
     <!-- A4 Landscape -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="CANOE">
       <img src="img/t57.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
@@ -561,7 +566,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="dragon">
       <img src="img/t90.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -584,7 +589,7 @@
 </div>
 
     <!-- A4 Landscape -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="scetch book">
       <img src="img/t23.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
@@ -595,7 +600,7 @@
   </div>
 </div>
 
-<div class="drawing-piece">
+<div class="drawing-piece" data-collection="stairs">
       <img src="img/t75.png" alt="A5 Landscape"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(14.8 * var(--cm));">
@@ -619,7 +624,7 @@
 </div>
 
     <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="scetch book">
       <img src="img/t21.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -653,7 +658,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="scetch book">
       <img src="img/t69.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -688,7 +693,7 @@
 </div>
 
     <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="house">
       <img src="img/t54.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -712,7 +717,7 @@
 </div>
 
  <!-- A3 Portrait -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="art">
       <img src="img/t88.png" alt="A3 Portrait"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
@@ -724,7 +729,7 @@
 </div>
 
     <!-- A4 Landscape -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="house">
       <img src="img/t46.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
@@ -736,7 +741,7 @@
 </div>
 
     <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="house">
       <img src="img/t20.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -771,7 +776,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t67.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -783,7 +788,7 @@
 </div>
 
 <!-- E2 Square -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="stairs">
       <img src="img/t79.png" alt="E2 Square"
            class="drawing-img"
            style="width: calc(18 * var(--cm)); height: calc(18 * var(--cm));">
@@ -795,7 +800,7 @@
 </div>
 
 <!-- E2 Square -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="stairs">
       <img src="img/t80.png" alt="E2 Square"
            class="drawing-img"
            style="width: calc(18 * var(--cm)); height: calc(18 * var(--cm));">
@@ -807,7 +812,7 @@
 </div>
 
 <!-- E2 Square -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="stairs">
       <img src="img/t81.png" alt="E2 Square"
            class="drawing-img"
            style="width: calc(18 * var(--cm)); height: calc(18 * var(--cm));">
@@ -819,7 +824,7 @@
 </div>
 
 <!-- E2 Square -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="stairs">
       <img src="img/t82.png" alt="E2 Square"
            class="drawing-img"
            style="width: calc(18 * var(--cm)); height: calc(18 * var(--cm));">
@@ -831,7 +836,7 @@
 </div>
 
 <!-- E2 Square -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="stairs">
       <img src="img/t83.png" alt="E2 Square"
            class="drawing-img"
            style="width: calc(18 * var(--cm)); height: calc(18 * var(--cm));">
@@ -856,7 +861,7 @@
 
 
 
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="house">
       <img src="img/z31.png" alt="E1 Landscape"
            class="drawing-img"
            style="width: calc(14.5 * var(--cm)); height: calc(12 * var(--cm));">
@@ -868,7 +873,7 @@
 </div>
 
     <!-- A3 Landscape -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="art">
       <img src="img/t52.png" alt="A3 Landscape"
            class="drawing-img"
            style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -881,7 +886,7 @@
 
 
     <!-- A4 Landscape -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="house">
       <img src="img/t58.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
@@ -916,7 +921,7 @@
   </div>
 </div>
 
-<div class="drawing-piece">
+<div class="drawing-piece" data-collection="stairs">
       <img src="img/t76.png" alt="A5 Portrait"
            class="drawing-img"
            style="width: calc(14.8 * var(--cm)); height: calc(21 * var(--cm));">
@@ -939,7 +944,7 @@
 </div>
 
     <!-- A4 Landscape -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="house">
       <img src="img/t47.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
@@ -962,7 +967,7 @@
 </div>
 
 <!-- A3 Portrait -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="art">
       <img src="img/t89.png" alt="A3 Portrait"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
@@ -1037,7 +1042,7 @@
 
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece">
+     <div class="drawing-piece" data-collection="dragon">
       <img src="img/t91.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -1049,7 +1054,7 @@
 </div>
 
 <!-- A3 Portrait -->
-    <div class="drawing-piece">
+    <div class="drawing-piece" data-collection="art">
       <img src="img/t87.png" alt="A3 Portrait"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(42 * var(--cm));">
@@ -1268,6 +1273,8 @@ function renderSortedDrawings(sorted) {
 </script>
 
 <script>
+
+  
   document.getElementById('collectionSelect').addEventListener('change', function () {
     const selected = this.value;
     const drawings = document.querySelectorAll('.drawing-piece');
