Update styles.css and drawings.html with new button design and layout improvements

--- a/drawings.html
+++ b/drawings.html
@@ -301,6 +301,30 @@
   </div>
 </div>
 
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="house">
+      <img src="img/t58.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.143</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
+<!-- A4 Portrait -->
+     <div class="drawing-piece" data-collection="house">
+      <img src="img/t116.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2021 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
      <!-- A3 Landscape -->
     <div class="drawing-piece">
       <img src="img/T3.png" alt="A3 Landscape"
@@ -371,6 +395,18 @@
   </div>
 </div>
 
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="sketch book">
+      <img src="img/t104.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
 <!-- A4 Portrait -->
      <div class="drawing-piece" data-collection="scetch book">
       <img src="img/t70.png" alt="A4 Portrait"
@@ -408,6 +444,18 @@
   </div>
 </div>
 
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="sketch book">
+      <img src="img/t98.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
     <!-- A4 Portrait -->
      <div class="drawing-piece">
       <img src="img/t25.png" alt="A4 Portrait"
@@ -429,6 +477,18 @@
     <h3>No.383</h3>
     <div class="meta-medium">2024 – Pen on paper</div>
     <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="house">
+      <img src="img/t114.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
   </div>
 </div>
 
@@ -540,6 +600,42 @@
   </div>
 </div>
 
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="sketch book">
+      <img src="img/t101.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.143</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="house">
+      <img src="img/t113.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
+    <!-- A4 Portrait -->
+     <div class="drawing-piece" data-collection="stairs">
+      <img src="img/t119.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2023 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
 <!-- A4 Portrait -->
      <div class="drawing-piece" data-collection="stairs">
       <img src="img/t50.png" alt="A4 Portrait"
@@ -590,7 +686,7 @@
 
     <!-- A4 Landscape -->
     <div class="drawing-piece" data-collection="scetch book">
-      <img src="img/t23.png" alt="A4 Landscape"
+      <img src="img/t100.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
       <div class="drawing-meta">
@@ -620,6 +716,18 @@
     <h3>No.164</h3>
     <div class="meta-medium">2020 – Pen on paper</div>
     <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="house">
+      <img src="img/t109.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
   </div>
 </div>
 
@@ -666,6 +774,18 @@
     <h3>No.000</h3>
     <div class="meta-medium">2023 – Pen on paper</div>
     <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="house">
+      <img src="img/t59.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.143</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
   </div>
 </div>
 
@@ -764,6 +884,18 @@
   </div>
 </div>
 
+ <!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="scetch book">
+      <img src="img/t103.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.143</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
    <div class="drawing-piece">
       <img src="img/z29.png" alt="A5 Portrait"
            class="drawing-img"
@@ -784,6 +916,17 @@
     <h3>No.000</h3>
     <div class="meta-medium">2023 – Pen on paper</div>
     <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<div class="drawing-piece" data-collection="sketch book">
+      <img src="img/t94.png" alt="A5 Landscape"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(14.8 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">210 x 148mm</div>
   </div>
 </div>
 
@@ -847,15 +990,15 @@
   </div>
 </div>
 
-<!-- A4 Landscape -->
+<!-- A3 Landscape -->
     <div class="drawing-piece">
-      <img src="img/t92.png" alt="A4 Landscape"
+      <img src="img/t92.png" alt="A3 Landscape"
            class="drawing-img"
-           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+           style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
       <div class="drawing-meta">
     <h3>No.000</h3>
     <div class="meta-medium">2020 – Pen on paper</div>
-    <div class="meta-size">297 x 210mm</div>
+    <div class="meta-size">420 x 297mm</div>
   </div>
 </div>
 
@@ -884,18 +1027,6 @@
   </div>
 </div>
 
-
-    <!-- A4 Landscape -->
-    <div class="drawing-piece" data-collection="house">
-      <img src="img/t58.png" alt="A4 Landscape"
-           class="drawing-img"
-           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
-      <div class="drawing-meta">
-    <h3>No.143</h3>
-    <div class="meta-medium">2019 – Pen on paper</div>
-    <div class="meta-size">297 x 210mm</div>
-  </div>
-</div>
 
 <!-- A5 Portrait -->
 <div class="drawing-piece">
@@ -943,6 +1074,18 @@
   </div>
 </div>
 
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="scetch book">
+      <img src="img/t99.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.143</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
     <!-- A4 Landscape -->
     <div class="drawing-piece" data-collection="house">
       <img src="img/t47.png" alt="A4 Landscape"
@@ -952,6 +1095,17 @@
     <h3>No.143</h3>
     <div class="meta-medium">2019 – Pen on paper</div>
     <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
+<div class="drawing-piece" data-collection="sketch book">
+      <img src="img/t95.png" alt="A5 Landscape"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(14.8 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">210 x 148mm</div>
   </div>
 </div>
 
@@ -1027,20 +1181,7 @@
 </div>
 
 
-    <!-- A4 Landscape -->
-    <div class="drawing-piece" data-collection="house">
-      <img src="img/t59.png" alt="A4 Landscape"
-           class="drawing-img"
-           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
-      <div class="drawing-meta">
-    <h3>No.143</h3>
-    <div class="meta-medium">2019 – Pen on paper</div>
-    <div class="meta-size">297 x 210mm</div>
-  </div>
-</div>
-
-
-
+    
 <!-- A4 Portrait -->
      <div class="drawing-piece" data-collection="dragon">
       <img src="img/t91.png" alt="A4 Portrait"
@@ -1065,6 +1206,30 @@
   </div>
 </div>
 
+<!-- A3 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t121.png" alt="A3 Landscape"
+           class="drawing-img"
+           style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
+    <div class="meta-size">420 x 297mm</div>
+  </div>
+</div>
+
+<!-- A4 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t115.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
 
     <div class="drawing-piece">
       <img src="img/z33.png" alt="E1 Portrait"
@@ -1077,15 +1242,39 @@
   </div>
 </div>
 
-<!-- A4 Landscape -->
-    <div class="drawing-piece">
-      <img src="img/t93.png" alt="A4 Landscape"
+<!-- A4 Portrait -->
+     <div class="drawing-piece" data-collection="dragon">
+      <img src="img/t120.png" alt="A4 Portrait"
            class="drawing-img"
-           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2021 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<!-- A3 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t93.png" alt="A3 Landscape"
+           class="drawing-img"
+           style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
       <div class="drawing-meta">
     <h3>No.000</h3>
     <div class="meta-medium">2020 – Pen on paper</div>
-    <div class="meta-size">297 x 210mm</div>
+    <div class="meta-size">420 x 297mm</div>
+  </div>
+</div>
+
+<!-- A4 Portrait -->
+     <div class="drawing-piece" data-collection="sketch book">
+      <img src="img/t97.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2023 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
   </div>
 </div>
 
@@ -1098,6 +1287,29 @@
     <h3>No.000</h3>
     <div class="meta-medium">2019 – Pen on paper</div>
     <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
+<!-- A3 Landscape -->
+    <div class="drawing-piece">
+      <img src="img/t122.png" alt="A3 Landscape"
+           class="drawing-img"
+           style="width: calc(42 * var(--cm)); height: calc(29.7 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
+    <div class="meta-size">420 x 297mm</div>
+  </div>
+</div>
+
+<div class="drawing-piece" data-collection="sketch book">
+      <img src="img/t96.png" alt="A5 Landscape"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(14.8 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.000</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">210 x 148mm</div>
   </div>
 </div>
     
