Update styles.css and drawings.html with new button design and layout improvements

--- a/drawings.html
+++ b/drawings.html
@@ -34,7 +34,7 @@
     <select id="collectionSelect">
       <option value="all">All</option>
       <option value="house">House Drawings</option>
-      <option value="scetch book">scetch book</option>
+      <option value="sketch book">sketch book</option>
       <option value="Wonderland">Wonderland</option>
       <option value="Throw">Throw</option>
       <option value="animals">Animal Drawings</option>
@@ -408,7 +408,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece" data-collection="scetch book">
+     <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t70.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -529,7 +529,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece" data-collection="scetch book">
+     <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t71.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -566,7 +566,7 @@
 </div>
 
  <!-- A4 Portrait -->
-     <div class="drawing-piece" data-collection="scetch book">
+     <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t68.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -685,12 +685,12 @@
 </div>
 
     <!-- A4 Landscape -->
-    <div class="drawing-piece" data-collection="scetch book">
+    <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t100.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
       <div class="drawing-meta">
-    <h3>No.143</h3>
+    <h3>No.000</h3>
     <div class="meta-medium">2019 – Pen on paper</div>
     <div class="meta-size">297 x 210mm</div>
   </div>
@@ -732,7 +732,7 @@
 </div>
 
     <!-- A4 Portrait -->
-     <div class="drawing-piece" data-collection="scetch book">
+     <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t21.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -766,7 +766,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece" data-collection="scetch book">
+     <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t69.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -885,7 +885,7 @@
 </div>
 
  <!-- A4 Landscape -->
-    <div class="drawing-piece" data-collection="scetch book">
+    <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t103.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
@@ -1075,7 +1075,7 @@
 </div>
 
 <!-- A4 Landscape -->
-    <div class="drawing-piece" data-collection="scetch book">
+    <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t99.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
