Update styles.css and drawings.html with new button design and layout improvements

--- a/drawings.html
+++ b/drawings.html
@@ -53,7 +53,7 @@
       <option value="art">Art book</option>
       <option value="CANOE">Canoe Collection</option>
       <option value="stairs">stairs</option>
-      <option value="dragon">dradon drawings</option>
+      <option value="dragon">dragon drawings</option>
       <!-- Add more options as needed -->
     </select>
   </div>
@@ -217,6 +217,18 @@
   </div>
 </div>
 
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="house">
+      <img src="img/t58.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.143</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
 <!-- A4 Portrait -->
 <div class="drawing-piece" data-collection="animals">
   <img src="img/T11.png" alt="A4 Portrait"
@@ -237,6 +249,18 @@
   <div class="drawing-meta">
     <h3>No.395</h3>
     <div class="meta-medium">2024 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<!-- A4 Portrait -->
+     <div class="drawing-piece" data-collection="house">
+      <img src="img/t116.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.144</h3>
+    <div class="meta-medium">2019 – Pen on paper</div>
     <div class="meta-size">210 x 297mm</div>
   </div>
 </div>
@@ -325,29 +349,8 @@
   </div>
 </div>
 
-<!-- A4 Landscape -->
-    <div class="drawing-piece" data-collection="house">
-      <img src="img/t58.png" alt="A4 Landscape"
-           class="drawing-img"
-           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
-      <div class="drawing-meta">
-    <h3>No.143</h3>
-    <div class="meta-medium">2019 – Pen on paper</div>
-    <div class="meta-size">297 x 210mm</div>
-  </div>
-</div>
 
-<!-- A4 Portrait -->
-     <div class="drawing-piece" data-collection="house">
-      <img src="img/t116.png" alt="A4 Portrait"
-           class="drawing-img"
-           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
-       <div class="drawing-meta">
-    <h3>No.144</h3>
-    <div class="meta-medium">2019 – Pen on paper</div>
-    <div class="meta-size">210 x 297mm</div>
-  </div>
-</div>
+
 
 <!-- A4 Portrait -->
      <div class="drawing-piece" data-collection="sketch book">
@@ -1155,7 +1158,7 @@
 </div>
 
     <!-- A4 Portrait -->
-     <div class="drawing-piece" data-collection="sketch book">
+     <div class="drawing-piece" data-collection="house">
       <img src="img/t20.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
@@ -1489,7 +1492,7 @@
 
 <!-- A4 Portrait -->
      <div class="drawing-piece" data-collection="dragon">
-      <img src="img/t142.png" alt="A4 Portrait"
+      <img src="img/t117.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
        <div class="drawing-meta">
@@ -2015,7 +2018,7 @@
 </div>
 
 <!-- A4 Landscape -->
-    <div class="drawing-piece" data-collection="house">
+    <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t102.png" alt="A4 Landscape"
            class="drawing-img"
            style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
@@ -2027,7 +2030,7 @@
 </div>
 
 <!-- A4 Portrait -->
-     <div class="drawing-piece" data-collection="sketch book">
+     <div class="drawing-piece" data-collection="house">
       <img src="img/t143.png" alt="A4 Portrait"
            class="drawing-img"
            style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
