Style fixes for drawings page and update About Me text

--- a/about.html
+++ b/about.html
@@ -68,6 +68,13 @@ MArch ARB / RIBA Part 2 - Scholarship recipient  </p>
 
       <h2>Experience</h2>
       <p>
+
+        <strong>- 2025 - Present Mosesseian Architecture - Part II Architectural Assistant.</strong> 
+      </p>
+         <p>
+Currently working as a Part II Architectural Assistant at Mosessessian Architecture working on high end residential projects.      </p>
+       <p>
+
     <strong>- 2024 - 2025 Architectural Association - Print centre assistant.</strong> 
       </p>
          <p>
@@ -81,7 +88,7 @@ Worked part-time in the university’s print centre, assisting students and staf
 Anglo-Belarusian society loft conversion: Appointed to transform a derelict loft into a library and exhibition space. Measured and drafted accurate plans and sections from scratch, eventually being used by the construction team. Acted as a consultant throughout, offering spatial advice while acknowledging structural limitations. Produced visualisations to support funding applications and promote the project.      </p>
      </p>
      <p>
-    <strong>- 2023 - 2023 Spencer Fung Architects - Architectural Assistant. </strong>
+    <strong>- 2023 - 2023 Spencer Fung Architects - Part I Architectural Assistant. </strong>
       </p>
          <p>
 Developed spa designs for a hotel project in Australia at Stage 3, producing detailed plans and visuals in response to evolving client feedback. Translated hand-drawn furniture sketches into buildable 2D/3D models for the ‘Twig’ collection. Supported preparation for the Ralph Pucci Gallery exhibition.      </p>
