--- a/drawings.html
+++ b/drawings.html
@@ -642,6 +642,18 @@
   </div>
 </div>
 
+<!-- A4 Portrait -->
+     <div class="drawing-piece" data-collection="house">
+      <img src="img/t181.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.196</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
     <!-- A3 Landscape -->
     <div class="drawing-piece" data-collection="animals">
       <img src="img/t14.png" alt="A3 Landscape"
@@ -905,6 +917,18 @@
        <div class="drawing-meta">
     <h3>No.103</h3>
     <div class="meta-medium">2019 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<!-- A4 Portrait -->
+     <div class="drawing-piece" data-collection="house">
+      <img src="img/t182.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.197</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
     <div class="meta-size">210 x 297mm</div>
   </div>
 </div>
@@ -1471,6 +1495,18 @@
   </div>
 </div>
 
+<!-- A4 Landscape -->
+    <div class="drawing-piece" data-collection="house">
+      <img src="img/t184.png" alt="A4 Landscape"
+           class="drawing-img"
+           style="width: calc(29.7 * var(--cm)); height: calc(21 * var(--cm));">
+      <div class="drawing-meta">
+    <h3>No.185</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
+    <div class="meta-size">297 x 210mm</div>
+  </div>
+</div>
+
     <!-- A4 Landscape -->
     <div class="drawing-piece" data-collection="house">
       <img src="img/t47.png" alt="A4 Landscape"
@@ -1539,6 +1575,18 @@
     <div class="meta-medium">2017 – Pen on paper</div>
     <div class="meta-size">297 x 420mm</div>
   </div>
+</div>
+
+ <!-- A4 Portrait -->
+     <div class="drawing-piece">
+      <img src="img/t180.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+  <h3>No.086 </h3>
+  <div class="meta-medium">2018 – Pen on paper</div>
+  <div class="meta-size">210 x 297mm </div>
+ </div>
 </div>
 
     <!-- A3 Landscape -->
@@ -1636,6 +1684,18 @@
   </div>
 </div>
 
+<!-- A5 Landscape -->
+<div class="drawing-piece" data-collection="house">
+  <img src="img/t185.png " alt="A5 Landscape"
+       class="drawing-img"
+       style="width: calc(21 * var(--cm)); height: calc(14.8 * var(--cm));">
+  <div class="drawing-meta">
+    <h3>No.182</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
+    <div class="meta-size">210 x 148mm</div>
+  </div>
+</div>
+
 <!-- A4 Portrait -->
      <div class="drawing-piece" data-collection="sketch book">
       <img src="img/t152.png" alt="A4 Portrait"
@@ -1705,6 +1765,18 @@
        <div class="drawing-meta">
     <h3>No.204</h3>
     <div class="meta-medium">2021 – Pen on paper</div>
+    <div class="meta-size">210 x 297mm</div>
+  </div>
+</div>
+
+<!-- A4 Portrait -->
+     <div class="drawing-piece" data-collection="house">
+      <img src="img/t183.png" alt="A4 Portrait"
+           class="drawing-img"
+           style="width: calc(21 * var(--cm)); height: calc(29.7 * var(--cm));">
+       <div class="drawing-meta">
+    <h3>No.198</h3>
+    <div class="meta-medium">2020 – Pen on paper</div>
     <div class="meta-size">210 x 297mm</div>
   </div>
 </div>
